# plexx.dev

./: .dockerignore  404.html  Cargo.toml  Dockerfile  README.md  Rocket.toml  index.html  main.css  nginx.conf  pgp.txt
.github/workflows/: docker-image.yml
game_files/conway/: Cargo.toml  index.js  watch.sh
game_files/conway/src/: lib.rs
game_files/snake/: Cargo.toml  index.js  watch.sh
game_files/snake/src/: lib.rs
src/: error.rs  games.rs  main.rs
src/conway/: routes.rs
src/snake/: routes.rs
src/urlshrtner/: mod.rs  routes.rs  short.rs
static/: main.css  portfolio.md
static/conway/: Cargo.toml  index.js  watch.sh
static/conway/src/: lib.rs
static/game-of-life/: Cargo.toml  index.js
templates/: coming_soon.html.tera  conway.html.tera  error.html.tera  game.html.tera  game_layout.html.tera  games.html.tera  index.html.tera  layout.html.tera  ping_pong_lobby.html.tera  snake.html.tera
templates/urlshrtner/: index.html.tera  result.html.tera
