[package]
name = "plexx-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sha2 = "*"
hex = "*"
validator = { version = "0.16.1", features = ["derive"] }
chrono = "*"

[dependencies.sqlx]
version = "0.7.3"
default-features = true
features = ["migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_mysql"]
