[package]
name = "plexx-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
sha2 = "0.10.9"
hex = "*"
chrono = "0.4.41"


[workspace]
members = [
    ".",
    "game_files/snake",
    "game_files/conway",
]